--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,12 @@
 
  * Table of content
 1 General: Base style and bootstrap overrides.
+ 1.1 Navigation bar
+ 1.2 Filter buttons
 2 Layout
- 2.1 Animations
- 2.2 Buttons
- 2.3 Thumbnail: Override bootstrap thumbnail and add hover effect
- 2.4 Icons
+ 2.1 Buttons
+ 2.2 Thumbnail: Override bootstrap thumbnail and add hover effect
+ 2.3 Icons
 3 Sections: Definition for sections and subsections
  3.1 Features
  3.2 Details frame
@@ -33,12 +34,20 @@ p {
 	color: #ffffff;
 }
 a {
+	text-decoration-line: none;
 	color: #ffffff;
 }
-a:hover {
+a:hover,
+a:focus,
+a:active {
 	color: #c5ff00;
-	text-decoration-line: none;
 }
+.container-xl {
+	max-width: 1140px;
+}
+/*
+1.1 Navigation bar
+**********************************************************************/
 .navbar {
 	position: fixed;
 	top: 0;
@@ -68,6 +77,7 @@ a:hover {
 	stroke-width: 2;
 	stroke-linecap: round;
 	fill: none;
+	box-shadow: none;
 	transition: background-color 0.5s, border-color 0.5s, stroke 0.5s;
 }
 @media (max-width: 991px) {
@@ -88,8 +98,6 @@ a:hover {
 }
 .navbar > .container-xl > .navbar-collapse > a {
 	color: #ffffff;
-	background-color: #164046;
-	text-transform: uppercase;
 	font-size: 15px;
 	margin: 4.5px 0;
 	padding: 10px 14px;
@@ -103,6 +111,9 @@ a:hover {
 .navbar > .container-xl > .navbar-collapse > a.active {
 	border-color: #c5ff00;
 }
+/*
+1.2 Filter buttons
+**********************************************************************/
 .nav.nav-pills {
 	margin-bottom: 30px;
 }
@@ -153,7 +164,7 @@ a:hover {
 	transform: scaleY(1);
 }
 /*
-2.2 Buttons
+2.1 Buttons
 **********************************************************************/
 .button {
 	display: inline-block;
@@ -183,18 +194,14 @@ a:hover {
 	background-color: unset;
 }
 /*
-2.3 Thumbnails
+2.2 Thumbnails
 **********************************************************************/
-#portfolio-grid {
-	margin-left: -5px;
-}
 .thumbnail {
 	display: block;
 	overflow: hidden;
 	position: relative;
 	padding: 4px;
 	margin-bottom: 20px;
-	margin-left: -10px;
 	text-align: center;
 	background-color: #164046;
 	border-radius: 4px;
@@ -255,7 +262,7 @@ a:hover {
 	transform: translateY(-100%);
 }
 /*
-2.4 Icons
+2.3 Icons
 **********************************************************************/
 .fa-download {
 	content: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'><path fill='white' d='M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 8-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z'/></svg>");
@@ -316,12 +323,19 @@ a:hover {
 	border-radius: 50%;
 	transition: transform 0.25s;
 }
-.service svg:hover {
+.service > a:hover > svg,
+.service > a:focus > svg,
+.service > a:active > svg {
 	transform: scale(1.1, 1.1);
 	border-color: #c5ff00;
 }
 .service h3 {
 	margin-top: 10px;
+}
+.service > a:hover > h3,
+.service > a:focus > h3,
+.service > a:active > h3 {
+	color: #c5ff00;
 }
 .service p {
 	padding: 0 10px;
@@ -349,7 +363,14 @@ a:hover {
 	height: 50px;
 	padding: 10px;
 	cursor: pointer;
+	float: right;
 	content: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 5 5'><path fill='none' stroke='white' stroke-width='1' stroke-linecap='round' d='M1 1l3 3M1 4l3-3'/></svg>");
+	opacity: 0.5;
+}
+.project-title .close:hover,
+.project-title .close:focus,
+.project-title .close:active {
+	opacity: 0.75;
 }
 .project-description {
 	font-size: 14px;
