--- a/css/style.css
+++ b/css/style.css
@@ -215,6 +215,10 @@ a:active {
 	height: auto;
 	aspect-ratio: 8/5;
 }
+.thumbnail img[src$=".svg"] {
+	background-color: #ffffff;
+	padding: 0 3%;;
+}
 .thumbnail h3,
 .thumbnail p {
 	margin: 0;
@@ -417,7 +421,13 @@ a:active {
 	width: 100%;
 	/* "height: auto" in combination with inline width and height allows to keep aspect ratio while loading for non-bleeding edge browsers, which do not support "aspect-ratio" yet. */
 	height: auto;
-	padding: 15px;
+	aspect-ratio: 8/5;
+	border: 15px solid transparent;
+}
+.single-project img[src$=".svg"] {
+	background-color: #ffffff;
+	background-clip: padding-box;
+	padding: 0 3%;
 }
 .project-info > table {
 	width: 100%;
