--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,13 @@ a:active {
 	border-color: #c5ff00;
 }
 
+:target::before {
+	content: "";
+	display: block;
+	height: 60px;
+	margin-top: -60px;
+}
+
 /*
 1.2 Filter buttons
 **********************************************************************/
